# kube-cleaner

./: .dockerignore  .gitignore  Dockerfile  README.md  index.yaml  pyproject.toml
.github/workflows/: build.yaml  lint-test.yaml
charts/kube-cleaner/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
charts/kube-cleaner/crds/: dev.superwise.ai_cleanuppolicies.yaml  dev.superwise.ai_clustercleanuppolicies.yaml
charts/kube-cleaner/templates/: _helpers.tpl  cleanuppolicy.yaml  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
examples/: cleanup-policy.yaml  cluster-cleanup-policy.yaml
kube_cleaner/: cleanup_policies.py
